Recode color command